--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "start": "node app.js",
-    "deploy": "node app.js"
+    "deploy": "git push heroku master"
   },
   "private": true,
   "dependencies": {
